[gd_scene load_steps=5 format=3 uid="uid://xwiu8d717kj4"]

[ext_resource type="Script" uid="uid://d1nkmycvrbk2d" path="res://player/gun_handler.gd" id="1_xy2c2"]
[ext_resource type="PackedScene" uid="uid://8lbbbwe2ufow" path="res://weapons/gun_rocket.tscn" id="2_fdg81"]
[ext_resource type="PackedScene" uid="uid://bflnfy31fb7gf" path="res://weapons/gun_mortar.tscn" id="3_gfwga"]
[ext_resource type="PackedScene" uid="uid://dt6b11m3vfhxj" path="res://weapons/gun_blocks.tscn" id="4_5aksp"]

[node name="GunHandler" type="Node3D"]
script = ExtResource("1_xy2c2")

[node name="GunPivot" type="Node3D" parent="."]

[node name="GunRocket" parent="GunPivot" instance=ExtResource("2_fdg81")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.26318, 0.790138)

[node name="GunMortar" parent="GunPivot" instance=ExtResource("3_gfwga")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.26318, 0.790138)

[node name="GunBlocks" parent="GunPivot" instance=ExtResource("4_5aksp")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1, 0.5)
